--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- <script src="https://code.jquery.com/jquery-1.10.2.js"></script> -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="assets/javascript/app.js" type="text/javascript"></script>
+    <script src="assets/javascript/app1.js" type="text/javascript"></script>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
         crossorigin="anonymous">
@@ -20,7 +20,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/style.css" />
-    <title>Title</title>
+    <title>Trivia Game</title>
 </head>
 
 <div class="container">
@@ -47,58 +47,77 @@
             </ul>
         </div>
         <br>
-        <div class="row">
-            <div class="col-md-12">
-                <div id="question">
-                    Name the guy from MIB.
-                </div>
-            </div>
+
+        <div id="startscreen">
+            <button id="start">Click To Start Game</button>
         </div>
 
-        <br>
-
-        <div id="answers">
-            <div class="row">
+        <div id="playscreen">
+            <br>
+            <div class=row>
                 <div class="col-md-1">
                 </div>
-                <div class="col-md-4">
-                    <div class="ans" id="answer1">
-                        Answer 1
+                <div class="col-md-2" id="timer">
+                </div>
+                <div class="col-md-1" id="wins">
+                </div>
+                <div class="col-md-1" id="loses">
+                </div>
+            </div>
+            <br>
+            <div class="row">
+                <div class="col-md-12">
+                    <div id="question">
+                        Name the guy from MIB.
                     </div>
                 </div>
-                <div class="col-md-4">
-                    <div class="ans" id="answer2">
-                        Answer 2
-                    </div>
-                </div>
-
             </div>
 
             <br>
 
-            <div class="row">
-                <div class="col-md-1">
-                </div>
-                <div class="col-md-4">
-                    <div class="ans" id="answer3">
-                        Answer 3
+            <div id="answers">
+                <div class="row">
+                    <div class="col-md-1">
                     </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="ans" id="answer4">
-                        Answer 4
+                    <div class="col-md-4">
+                        <div class="ans" id="answer1">
+                            Answer 1
+                        </div>
                     </div>
+                    <div class="col-md-4">
+                        <div class="ans" id="answer2">
+                            Answer 2
+                        </div>
+                    </div>
+
                 </div>
+
+                <br>
+
+                <div class="row">
+                    <div class="col-md-1">
+                    </div>
+                    <div class="col-md-4">
+                        <div class="ans" id="answer3">
+                            Answer 3
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="ans" id="answer4">
+                            Answer 4
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+            <br>
+
+            <div>
+
+                Hold for gifs
 
             </div>
-        </div>
-
-        <br>
-
-        <div>
-
-
-            
         </div>
 
 
